--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "modules/floating-ui"]
 	path = modules/floating-ui
 	url = https://github.com/floating-ui/floating-ui.git
+[submodule "modules/pyAircraftIden"]
+	path = modules/pyAircraftIden
+	url = https://github.com/bnsgeyer/pyAircraftIden.git
