Use python3 when executing http server
Signed-off-by: Ryan Friedman <25047695+Ryanf55@users.noreply.github.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Host",
             "type": "shell",
-            "command": "python -m http.server --bind 127.0.0.1",
+            "command": "python3 -m http.server --bind 127.0.0.1",
             "isBackground": true,
             "problemMatcher": {
                 "pattern": {
